[tool.poetry]
name = "unm-raystation"
version = "0.1.0"
description = ""
authors = ["Michael Fan <mfan1@unmmg.org>"]
readme = "README.md"
packages = [{include = "unm_raystation"}]

[tool.poetry.dependencies]
python = "^3.8.7"


[tool.poetry.group.production.dependencies]
pydicom = "^2.3.0"
jupyterlab = "^3.5.0"


[tool.poetry.group.raystation.dependencies]
anyio = "3.6.2"
argon2-cffi = "21.3.0"
argon2-cffi-bindings = "21.2.0"
asttokens = "2.1.0"
attrs = "22.1.0"
babel = "2.11.0"
backcall = "0.2.0"
beautifulsoup4 = "4.11.1"
bleach = "5.0.1"
certifi = "2022.9.24"
cffi = "1.15.1"
charset-normalizer = "2.1.1"
colorama = "0.4.4"
debugpy = "1.6.3"
decorator = "4.4.2"
defusedxml = "0.7.1"
entrypoints = "0.4"
et-xmlfile = "1.0.1"
executing = "1.2.0"
fastjsonschema = "2.16.2"
idna = "3.4"
importlib-metadata = "5.0.0"
importlib-resources = "5.10.0"
ipykernel = "6.17.1"
ipython = "8.6.0"
ipython-genutils = "0.2.0"
jdcal = "1.4.1"
jedi = "0.17.2"
jinja2 = "3.1.2"
json5 = "0.9.10"
jsonschema = "4.17.0"
markupsafe = "2.1.1"
matplotlib-inline = "0.1.6"
mistune = "2.0.4"
nbclassic = "0.4.8"
nbclient = "0.7.0"
nbconvert = "7.2.5"
nbformat = "5.7.0"
nest-asyncio = "1.5.6"
notebook = "6.5.2"
notebook-shim = "0.2.2"
openpyxl = "3.0.6"
packaging = "22.0" # changed from 21.3 to 22 to allow installation of black
pandocfilters = "1.5.0"
parso = "0.7.1"
pickleshare = "0.7.5"
pkgutil-resolve-name = "1.3.10"
platformdirs = "2.5.4"
prometheus-client = "0.15.0"
prompt-toolkit = "3.0.16"
psutil = "5.9.4"
pure-eval = "0.2.2"
pycparser = "2.20"
pygments = "2.8.0"
pyparsing = "3.0.9"
pyreadline = "2.1"
pyrsistent = "0.19.2"
python-dateutil = "2.8.2"
pytz = "2022.6"
pyzmq = "24.0.1"
requests = "2.28.1"
send2trash = "1.8.0"
six = "1.16.0"
sniffio = "1.3.0"
soupsieve = "2.3.2.post1"
stack-data = "0.6.1"
terminado = "0.17.0"
tinycss2 = "1.2.1"
tomli = "2.0.1"
tornado = "6.2"
traitlets = "5.5.0"
urllib3 = "1.26.12"
wcwidth = "0.2.5"
webencodings = "0.5.1"
websocket-client = "1.4.2"
zipp = "3.10.0"
numpy = "1.19.5"
pythonnet = "2.5.1"
pywin32 = "300"
pywinpty = "2.0.9"
setuptools = "49.2.1"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
mypy = "^0.991"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99

[tool.isort]
profile = "black"
